[package]
name = "stylecs-shared"
version = "0.1.0"
edition = "2021"
description = "Shared functionality for `stylecs` and `stylecs-macros`"
repository = "https://github.com/khonsulabs/stylecs"
license = "MIT OR Apache-2.0"
keywords = ["styles", "stylesheets", "theming"]
categories = ["data-structures"]
readme = "./README.md"

[dependencies]
