[package]
name = "xtask"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Development Tasks"
repository = "https://github.com/khonsulabs/stylecs"
license = "MIT OR Apache-2.0"
keywords = ["styles", "stylesheets", "theming"]
categories = ["data-structures"]
readme = "./README.md"

[dependencies]
khonsu-tools = { git = "https://github.com/khonsulabs/khonsu-tools.git", branch = "main" }
